remove method post

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 </head>
 <body>
     <div id="loginForm">
-        <form name="form" onsubmit="return validateForm()" method="post" action="boas-vindas/index.html">
+        <form name="form" onsubmit="return validateForm()" action="boas-vindas/index.html">
             <h1 class="login-title">Login</h1>
 
             <input type="text" placeholder="User" name="fname">
