--- a/index.html
+++ b/index.html
@@ -11,19 +11,17 @@
 </head>
 <body>
     <div id="loginForm">
-        <form name="form">
-            <h1 class="login-title">Login</h1>
+        <h1 class="login-title">Login</h1>
 
-            <input type="text" placeholder="User" name="fname">
-            <br><br>
+        <input id="user-input" type="text" placeholder="User" name="fname">
+        <br><br>
 
-            <input type="password" placeholder="Password" name="fpass">
-            <br><br>
+        <input id="pass-input" type="password" placeholder="Password" name="fpass">
+        <br><br>
 
-            <button class="login-btn" onclick="return validateForm()">Entrar</button>
-            <br><br>
-            <button type="reset" class="cancel-btn">Cancelar</button> 
-        </form>
+        <button class="login-btn" onclick="return validateForm()">Entrar</button>
+        <br><br>
+        <button type="reset" class="cancel-btn">Cancelar</button> 
     </div>
 
     <div id="greetings">
