--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 
         <button class="login-btn" onclick="return validateForm()">Entrar</button>
         <br><br>
-        <button type="reset" class="cancel-btn">Cancelar</button> 
+        <button class="cancel-btn" onclick="reset()">Cancelar</button> 
     </div>
 
     <div id="greetings">
